<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:opencv="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonOpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:onClick="buttonOpen"
            android:text="@string/open"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:onClick="buttonClose"
            android:text="@string/close"
            app:layout_constraintBaseline_toBaselineOf="@+id/buttonOpen"
            app:layout_constraintStart_toEndOf="@+id/buttonOpen" />

        <TextView
            android:id="@+id/steppers_fan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/steppers_fan"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonOpen" />

        <TextView
            android:id="@+id/gripper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/gripper"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switchFan" />

        <Button
            android:id="@+id/button_transitionFlipper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:onClick="buttonTransitionFlipper"
            android:text="@string/transition_flipper"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_home"
            app:layout_constraintStart_toEndOf="@+id/button_home" />

        <Button
            android:id="@+id/button_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:onClick="buttonHome"
            android:text="@string/home"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/positions" />

        <Button
            android:id="@+id/button_calibration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="buttonCalibration"
            android:text="@string/calibration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calibration" />

        <Button
            android:id="@+id/button_transitionChessboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:onClick="buttonTransitionChessboard"
            android:text="@string/transition_chessboard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_home" />

        <Button
            android:id="@+id/gripper_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:onClick="buttonGripperOpen"
            android:text="@string/gripper_open"
            app:layout_constraintBaseline_toBaselineOf="@+id/gripper_close"
            app:layout_constraintStart_toEndOf="@+id/gripper_close" />

        <Button
            android:id="@+id/gripper_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:onClick="buttonGripperClose"
            android:text="@string/gripper_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gripper" />

        <NumberPicker
            android:id="@+id/numPicker_gripper_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gripper_close" />

        <NumberPicker
            android:id="@+id/numPicker_gripper_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="103dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/numPicker_gripper_close"
            app:layout_constraintTop_toBottomOf="@+id/gripper_open" />

        <TextView
            android:id="@+id/positions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/positions"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numPicker_gripper_close" />

        <TextView
            android:id="@+id/movements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/movements"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_transitionChessboard" />

        <Button
            android:id="@+id/buttonPlus_Y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="buttonPlusY"
            android:text="@string/plus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movements" />

        <Button
            android:id="@+id/buttonY_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="buttonYPlus"
            android:text="@string/yPlus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonPlus_Y" />

        <Button
            android:id="@+id/buttonPlus_X"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:onClick="buttonPlusX"
            android:text="@string/plus"
            app:layout_constraintBaseline_toBaselineOf="@+id/buttonX_plus"
            app:layout_constraintStart_toEndOf="@+id/buttonX_plus" />

        <Button
            android:id="@+id/buttonX_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="buttonXPlus"
            android:text="@string/xPlus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonY_plus" />

        <Button
            android:id="@+id/buttonMinus_X"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:onClick="buttonMinusX"
            android:text="@string/minus"
            app:layout_constraintBaseline_toBaselineOf="@+id/buttonX_minus"
            app:layout_constraintEnd_toStartOf="@+id/buttonX_minus" />

        <Button
            android:id="@+id/buttonX_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="buttonXMinus"
            android:text="@string/xMinus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonY_plus" />

        <Button
            android:id="@+id/buttonMinus_Y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="buttonMinusY"
            android:text="@string/minus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonY_minus" />

        <Button
            android:id="@+id/buttonY_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="buttonYMinus"
            android:text="@string/yMinus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonX_minus" />

        <Button
            android:id="@+id/buttonPlus_Z"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:onClick="buttonPlusZ"
            android:text="@string/plus"
            app:layout_constraintBaseline_toBaselineOf="@+id/buttonZ_plus"
            app:layout_constraintStart_toEndOf="@+id/buttonZ_plus" />

        <Button
            android:id="@+id/buttonZ_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="buttonZPlus"
            android:text="@string/zPlus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonMinus_Y" />

        <Button
            android:id="@+id/buttonMinus_Z"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:onClick="buttonMinusZ"
            android:text="@string/minus"
            app:layout_constraintBaseline_toBaselineOf="@+id/buttonZ_minus"
            app:layout_constraintEnd_toStartOf="@+id/buttonZ_minus" />

        <Button
            android:id="@+id/buttonZ_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="buttonZMinus"
            android:text="@string/zMinus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonMinus_Y" />

        <org.opencv.android.JavaCameraView
            android:id="@+id/cameraView"
            android:layout_width="0dp"
            android:layout_height="500dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonNewChess"
            opencv:camera_id="any"
            opencv:show_fps="true" />

        <TextView
            android:id="@+id/calibration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="Calibration"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonMinus_Z" />

        <Button
            android:id="@+id/buttonNewChess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="buttonNewChess"
            android:text="New Chess"
            app:layout_constraintEnd_toEndOf="@+id/buttonFlipperIn"
            app:layout_constraintStart_toStartOf="@+id/buttonFlipperIn"
            app:layout_constraintTop_toBottomOf="@+id/buttonFlipperIn" />

        <Button
            android:id="@+id/buttonFlipperOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonFlipperOut"
            android:text="Flipper Out"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_calibration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.84"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonFlipperIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="buttonFlipperIn"
            android:text="Flipper In"
            app:layout_constraintEnd_toEndOf="@+id/button_calibration"
            app:layout_constraintStart_toStartOf="@+id/button_calibration"
            app:layout_constraintTop_toBottomOf="@+id/button_calibration" />

        <Switch
            android:id="@+id/switchAuto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Automatic"
            android:textOff="Off"
            android:textOn="On"
            app:layout_constraintEnd_toEndOf="@+id/buttonFlipperOut"
            app:layout_constraintStart_toStartOf="@+id/buttonFlipperOut"
            app:layout_constraintTop_toBottomOf="@+id/buttonFlipperOut" />

        <Switch
            android:id="@+id/switchSteppers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="Steppers"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/steppers_fan" />

        <Switch
            android:id="@+id/switchFan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="Fan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switchSteppers" />

        <Switch
            android:id="@+id/switchTurnPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="AI First"
            app:layout_constraintEnd_toEndOf="@+id/switchAuto"
            app:layout_constraintStart_toStartOf="@+id/switchAuto"
            app:layout_constraintTop_toBottomOf="@+id/switchAuto" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
